# desempenho-educacional-maranhao

./: .gitignore  README.md  pyproject.toml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
artigo/: 0_abstract.tex  1_introduction.tex  2_related_works.tex  3_material_and_methods.tex  4_computational_experiments.tex  5_conclusions.tex  6_acknowlegment_and_credits.tex  main.tex  references.bib
artigo/documentos/: README.md
data/base/: ibge.xlsx  idhm.xlsx
data/base/microdados_censo_escolar_2023/dados/: docentes.ods
reports/: analytics-executado.html  seminario_conceitos_python.md  seminario_slides.html  seminario_slides.qmd  theme.scss
src/: analytics.ipynb  analytics.py  ingest.py  transform.py  util.py
