[project]
name = "desempenho-educacional-maranhao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "matplotlib>=3.10.8",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pandera>=0.30.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
