[project]
name = "desempenho-educacional-maranhao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.3",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pandera>=0.30.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
]
